Updated Server environment to JDK 16
The project now requires JDK 16 to build.

Download here: https://www.oracle.com/java/technologies/javase-jdk16-downloads.html